# SecureSG

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: release-integrity.yml
config/: .env.example
docs/: release-integrity.md
docs/superpowers/plans/: 2026-06-30-adapter-redaction-privacy.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
integrations/claude-code/: README.md  secureai-guard.mjs  secureai-guard.test.mjs  settings.snippet.json
integrations/codex/: README.md  hooks.snippet.json  secureai-guard.mjs  secureai-guard.test.mjs
integrations/cursor/: README.md  hooks.snippet.json  secureai-guard.mjs  secureai-guard.test.mjs
integrations/shared/: secureai-redact.mjs  secureai-redact.test.mjs
scanner/: .dev.vars.example  .env.example  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scanner/public/: gallery.json  incidents.json  install.ps1  install.sh  secureai-guard.mjs
scanner/scripts/: build-gallery.ts
scanner/shared/: canonical.test.ts  canonical.ts  contract.ts  errors.ts  proof.ts
scanner/src/: App.tsx  config.ts  main.tsx
scanner/worker/: config.ts  errors.ts
scripts/: fetch_model.py  ollama_smoke.py  policy_author.py  release-checksums.mjs  release-checksums.test.mjs  sync-adapter-redaction.mjs  sync-adapter-redaction.test.mjs
secureSG/: __init__.py  exceptions.py  main.py
secureSG/audit/: __init__.py  chain.py  logger.py  verifier.py
secureSG/config/: __init__.py  settings.py
secureSG/dashboard/: categories.py  reader.py
secureSG/demo/: driver.py  scenario.py  server.py
secureSG/guard/: __init__.py  enforcer.py  matching.py  proxy.py  screening.py  taint.py  trajectory.py
secureSG/models/: guardformer.py  loader.py  ollama_provider.py  openai_provider.py  provider.py
secureSG/policies/: default.yaml  high_risk_tools.yaml  injection_signatures.yaml
secureSG/schemas/: __init__.py  assessment.py  audit.py  tool_call.py  tool_schema.py  verdict.py
secureSG/warden/: authoring.py  discovery.py  embeddings.py  grammar.py  intent.py  risk_anchors.yaml  scope.py
secureai/: .dev.vars.example  .gitignore  .oxlintrc.json  graph.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
secureai/migrations/: 0001_init.sql  0002_billing.sql  0003_auth_stats.sql  0004_2fa.sql  0005_roles.sql  0006_scan_history.sql  0007_scan_details.sql  0008_email_verified.sql  0009_user_names.sql  0010_perf_indexes.sql  0012_guard_device_credentials.sql  0013_guard_device_active_unique.sql
secureai/src/: errors.ts  index.scheduled.test.ts  index.test.ts  index.ts  verdict.test.ts  verdict.ts
tests/: __init__.py
tests/integration/: test_demo_server.py  test_proxy_pipeline.py
tests/unit/: test_exceptions.py  test_fetch_model.py  test_main.py  test_policy_author.py  test_settings.py
(+259 files in other folders)
