[project]
name = "securesg"
version = "0.1.0"
description = "SecureSG — runtime control layer and governance engine for LLM agents."
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=secureSG --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["secureSG"]

[tool.coverage.report]
show_missing = true
# CLAUDE.md section 8: 85% is the enforced floor (the suite holds 100%). Declared
# here so a bare ``pytest`` and CI apply the same gate from one source of truth.
fail_under = 85
exclude_also = [
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
# Asserts and test-controlled SQL strings are expected in the test suite.
"tests/**" = ["S101", "S608"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Native wheels without bundled type stubs; imported lazily in gated paths.
module = ["sentence_transformers", "torch"]
ignore_missing_imports = true
